# demap

./: .gitignore  README.md  demap.py  pyproject.toml
demap/: __init__.py  _base.py  _impl.py  chi.py  core.py  dem.py  geoarray.py  geogrid.py  helpers.py  inout.py  io.py  main.py  plot.py  stream.py  swath.py  valley.py  xr_accessor.py
demap/old/: 01_basic_usage.ipynb  _impl.py  chi.py  flow.py  plot.py  stream_old.py  swath.py
tutorial/: 01_basic_usage.ipynb  olympics_500m_dem.tif
