[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "demap"
version = "0.0.1"
authors = [
    {name = "Jingtao Lai", email = "lai@gfz-potsdam.de"},
]
description = "`A set of python-based topographic analysis tools for geomorphologists."
requires-python = ">=3.7"
dependencies = [
    "richdem",
    "rasterio",
]

[tool.setuptools]
packages = ["demap"]